--- a/src/web/dataloader.html
+++ b/src/web/dataloader.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div>Input</div>
-  <div>Roll,pitch,yaw</div>
-  <div id="data"><textarea rows="30" cols="100" ></textarea></div>
+  <div>Roll pitch yaw,r p y,r p y,etc</div>
+  <div id="data"><textarea rows="20" cols="100" ></textarea></div>
   <span><a id="go">go</a></span>
 </body>
 </html>
