--- a/src/web/gui/GUI.html
+++ b/src/web/gui/GUI.html
@@ -482,6 +482,7 @@ style="position:absolute;bottom:70px; left: 10px;border: 2px solid #333333; -moz
 <div id = "Sim" name="Sim"
 style="position:absolute;bottom:10px; left: 10px;border: 2px solid #333333; -moz-border-radius : 10px; border-radius : 10px; height: 40px; width:250px; z-index:100;background-color:rgba(0,0,0,0.3);">
 <button type="button" style="position:absolute;top:7px; left: 80px;" onClick=SendAngles();>Send Angles</button>
+<button type="button" style="position:absolute;top:7px; left: 0px;" onClick=TestNigger();>Test</button>
 </div>
 
 </div>
@@ -783,7 +784,8 @@ for(var i = 0; i < idlist.length; i++) {
 			I : 0,
 			D : 0
 		},
-		pitch :{packet
+		pitch :{
+			
 			deg:  0,
 			P : 0,
 			I : 0,
@@ -937,7 +939,7 @@ for(var i = 0; i < idlist.length; i++) {
     };
 
     function UpdateSimulation() {
-         var unity = GetUnity();
+    var unity = GetUnity();
     if(unity) {
             $.ajax({
                 url: "/guisim/",
@@ -973,7 +975,7 @@ for(var i = 0; i < idlist.length; i++) {
 	//if (data.yaw == "") { yawPrint = "No Yaw"}
 	//else { yawPrint = data.yaw + "°"; }
 	
-	if(console) { console.value += " Roll: " + data.roll +'&deg' + " \tPitch: " + data.pitch +'&deg' + " \tYaw: " + data.yaw +'&deg\n'; }
+	if(console) { console.value += " Roll: " + data.roll +"\u00B0" + " \tPitch: " + data.pitch +"\u00B0" + " \tYaw: " + data.yaw +"\u00B0" + "\n"; }
     }
 
     function CheckBoundaries() {
@@ -1116,6 +1118,94 @@ BIT OF BOTH
 
    rT.setAttribute("transform", "rotate("+ x +" "+100+" "+75+")");
    rB.setAttribute("transform", "rotate("+ y +" "+100+" "+75+")");
+
+}
+
+function TestNigger() {
+
+		rollV = document.getElementById("rA");
+		pitchV = document.getElementById("pA");
+		yawV = document.getElementById("yA");
+		
+		var printingRoll;
+		var printingYaw;
+		var sendingRoll;
+		var sendingYaw;
+		
+		
+		//if yaw and roll is not entered -> yaw is 0 and roll is 0 but that gets disregarded (set to 0 so that it's not null)
+		if(yawV.value == "" && rollV.value == ""){
+			yawV.value = 0, //rollV.value = 0;//roll will not be read so it doesn't matter what it is...as long as it's not null
+			printingRoll = "No roll value"; printingYaw = yawV.value; 
+			sendingYaw = yawV.value; sendingRoll = 0;
+			
+		//if roll is entered and yaw isn't -> roll is the entered value and yaw is -1
+		}else if (yawV.value == "" && rollV.value != ""){
+			printingYaw = "No yaw value"; printingRoll = rollV.value;
+			sendingYaw = -1; sendingRoll = rollV.value;
+			
+		//if yaw is entered and roll isn't -> roll is set to 0 (once again; set to 0 so it's not null) and yaw is the entered value 
+		}else if (yawV.value != "" && rollV.value == ""){
+			//rollV.value = 0;//roll will not be read so it doesn't matter what it is...as long as it's not null
+			printingRoll = "No roll value"; printingYaw = yawV.value; 
+			sendingYaw = yawV.value; sendingRoll = 0;
+		}
+
+	var packet = {
+		roll : parseInt(sendingRoll,10) ? parseInt(rollV.value,10) : 0,
+		pitch : parseInt(pitchV.value,10) ? parseInt(pitchV.value,10) : 0,	
+		yaw : parseInt(sendingYaw,10) ? parseInt(sendingYaw,10) : -1,
+	}
+	
+ 	var unity = GetUnity();
+	if(unity) {
+		/*$.ajax({
+			url: "/dataloader/",
+			dataType: 'json',
+			data: {},
+			success: function (data) {
+			
+				TestDataNegroFunction(data);
+			
+			}
+		});
+	*/
+
+	TestDataNegroFunction(packet);
+	
+	}
+}
+
+  function TestDataNegroFunction(packet) {
+
+	var roll = yaw = pitch = 0;
+	var unity = GetUnity();
+
+	var intervalId = setInterval(function () { 
+
+		if(packet.roll < yaw) { roll--; }
+		if(packet.roll > roll) { roll++; }
+
+		if(packet.yaw < yaw) { yaw--; }
+		if(packet.yaw > yaw) { yaw++; }
+
+		if(packet.pitch < pitch) { pitch--; }
+		if(packet.pitch > pitch) { pitch++; }
+
+		unity.SendMessage("MyObject", "gRoll", roll);
+		unity.SendMessage("MyObject", "gPitch", -pitch);
+		unity.SendMessage("MyObject", "gYaw", -yaw);
+
+		var data = { roll : roll, pitch : pitch, yaw : yaw }
+		
+		UpdateRollPitchYawSpans(data);
+		UpdateConsole(data);
+		UpdateAH(data);
+		UpdateYawIndicator(data);
+
+		if(roll == packet.roll && pitch == packet.pitch && yaw == packet.yaw) { clearTimeout(intervalId); }
+
+		}, 50);
 
 }
 
